--- a/extra.css
+++ b/extra.css
@@ -1,4 +1,15 @@
-.col-md-4 {
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hx-center {
+  text-align: center;
+}
+
+.input-red {
+  border-color: red;
 }
 
 .tip {
@@ -6,15 +17,66 @@
   margin: 0;
 }
 
-.space {
-  min-width: 1px;
-  height: 5%;
+.error-msg {
+  color: red;
 }
 
+.no-margin-right {
+  margin-right: 0;
+}
+.no-margin-left {
+  margin-left: 0;
+}
+.no-margin-bot {
+  margin-bottom: 0;
+}
+.no-margin-top {
+  margin-top: 0;
+}
 .no-margin {
   margin: 0;
 }
 
 .btn-no-radius {
   border-radius: 0;
+}
+
+.no-left-padding {
+  padding-left: 0;
+}
+.no-right-padding {
+  padding-right: 0;
+}
+.no-top-padding {
+  padding-top: 0;
+}
+.no-bot-padding {
+  padding-bottom: 0;
+}
+.no-padding {
+  padding: 0;
+}
+/* TOP PADDING */
+.top-padding {padding-top: 0.5em;}
+.top-padding-1 {padding-top: 1%} .top-padding-2{padding-top: 2%}
+.top-padding-3 {padding-top: 3%} .top-padding-4 {padding-top: 4%;}
+.top-padding-5 {padding-top: 5%;} .top-padding-6 {padding-top: 6%;}
+.top-padding-7 {padding-top: 7%;} .top-padding-8 {padding-top: 8%;}
+.top-padding-9 {padding-top: 9%;} .top-padding-10 {padding-top: 10%;}
+.top-padding-11 {padding-top: 11%} .top-padding-12 {padding-top: 12%;}
+/* BOT PADDING */
+.bot-padding {padding-bottom: 0.5em;}
+.bot-padding-1 {padding-bottom: 1%;} .bot-padding-2 {padding-bottom: 2%;}
+.bot-padding-3 {padding-bottom: 3%;} .bot-padding-4 {padding-bottom: 4%;}
+.bot-padding-5 {padding-bottom: 5%;} .bot-padding-6 {padding-bottom: 6%;}
+.bot-padding-7 {padding-bottom: 7%;} .bot-padding-8 {padding-bottom: 8%;}
+.bot-padding-9 {padding-bottom: 9%;} .bot-padding-10 {padding-bottom: 10%;}
+
+.thin-border {
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+}
+.bot-border {
+  border-bottom: 1px solid gray;
 }
